# QuantFocus

./: Cargo.toml  Makefile  Makefile.bak  beam.mod  build.rs  build.rs.bak  fileStructure.md  monte_carlo.mod
docs/: FileSystem.md  systemDefination.md  test.md
fortran/: CMakeLists.txt
fortran/include/: sem_sim_c.h
fortran/src/: Makefile.bak  beam.f90  c_interface.f90  c_interface.f90.bak  c_interface.mod  libsem.dylib  materials.f90  materials.mod  monte_carlo.f90  monte_carlo.mod  run.c  scattering.f90  signals.f90  simulate_main
include/quantum_sem/: core.h  qft.h
src/: lib.rs  main.rs
src/ffi/: bindings.rs  wrapper.rs
src/imaging/: export.rs  formation.rs  mod.rs
src/materials/: custom.rs  mod.rs  presets.rs
src/quantum/: qft.c
src/simulation/: mod.rs  parameters.rs  results.rs
src/ui/: app.rs  mod.rs  visualizer.rs
