[package]
name = "QuantFocus"
version = "0.1.0"
edition = "2021"

# Build script to generate FFI bindings
build = "build.rs"

[dependencies]
iced_aw = { version = "0.12", default-features = false, features = ["badge", "card"] }

# FFI safety wrappers
libc = "0.2"

png = "0.17"
once_cell = "1.18"

# Serialization for parameters & materials
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing & export
image = "0.24"
imageproc = "0.23"

# Parallelism for simulation batch runs
rayon = "1.7"

# GUI toolkit (choose one; here using Iced)
iced = { version = "0.9", features = ["wgpu"], optional = true }
eframe = "0.16"
egui = "0.16"

# For async messaging & channels (if needed)
crossbeam-channel = "0.5"

# Logging and configuration (optional but recommended)
log = "0.4"
env_logger = "0.10"
config = "0.13"
sdl2 = "0.34"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0"

[dev-dependencies]
# For integration tests (e.g. CLI tests)
assert_cmd = "2.0"
predicates = "2.1"

[features]
# Optional feature flags to enable/disable UI
default = ["gui"]
gui = ["iced"]
cli = []

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=11.0"]
